gcc/testsuite/g++.dg/pph/y8inc-nmspc.cc
namespace smother {
#include "x1struct1.h"
// { dg-error "pph file not included at global scope" "" { xfail *-*-* } }
}
